# adsignal-ai

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
adsignal/: __init__.py  config.py
adsignal/static/css/: app.css
adsignal/static/js/: dashboard.js
adsignal/templates/: base.html  index.html
docs/: adsignal_claude_build_plan.md
